Bug #25816 - disallow arrays in class constants

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@148311 c90b9560-bf6c-de11-be94-00142212c4b1